# EstoqueApp

./: .gitignore  Estoque.py  app.py  main.py  pizzaria.vbs  pyproject.toml  teste.bat
comandos/: comando.txt
controllers/: Api.py
database/: conexao.py  crud.py
models/: aula.py  estoque.py
views/: app.py
