[project]
name = "estoqueapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Gionata2266",email = "gionata2266@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
