[tool.poetry]
name = "estoqueapp"
version = "0.1.0"
description = ""
authors = [
    "Gionata2266 <gionata2266@hotmail.com>",
    "patriciaLindoso <patricia.d2310@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.58.0,<2.0.0"
flask = ">=3.1.3,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"